# depmap-omics-rna

./: .dockstore.yml  .env.dist  .gitignore  Dockerfile  README.md  config.toml  deploy.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: run_checks.yml
depmap_omics_rna/: __main__.py  data.py  types.py  utils.py
gql/: omics_mapping.gql  sequencing_alignment.gql
gumbo_gql_client/: __init__.py  enums.py  gumbo_client.py  input_types.py  rna_sequencing_alignments.py
scratch/: compare_junc.py  copy_start_junc.py  empty_outputs.py  ras_inh_res_onboarding.py
workflows/align_rna_sample/: align_rna_sample.json  align_rna_sample.wdl
workflows/align_sr_rna/: README.md  align_sr_rna.json  align_sr_rna.wdl  align_sr_rna_inputs.json
workflows/call_sr_rna_fusions/: README.md  call_sr_rna_fusions.json  call_sr_rna_fusions.wdl  call_sr_rna_fusions_inputs.json
workflows/common/: star_arriba.Dockerfile
workflows/gzip_tsv/: README.md  gzip_tsv.json  gzip_tsv.wdl
workflows/process_sr_rna/: README.md  process_sr_rna.json  process_sr_rna.wdl  process_sr_rna_inputs.json
workflows/quantify_sr_rna/: README.md  quantify_sr_rna.json  quantify_sr_rna.wdl  quantify_sr_rna_inputs.json  salmon.Dockerfile
workflows/remap_sr_rna/: remap_sr_rna.wdl  remap_sr_rna_inputs.json
