[project]
name = "depmap-omics-rna"
version = "0.1.0"
description = ""
authors = []
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "ariadne-codegen>=0.13.0,<0.14",
    "pandas>=2.2.3,<3",
    "pandera[strategies]>=0.20.4,<0.21",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.10.6,<3",
    "google-cloud-storage>=2.19.0,<3",
    "google-cloud-logging>=3.11.4,<4",
    "functions-framework>=3.8.2,<4",
    "typer>=0.16.0,<0.17",
    "pygithub>=2.6.1,<3",
    "pd-flatten>=0.1.1,<0.2",
    "google-cloud-secret-manager>=2.23.1,<3",
    "nebelung>=2.10.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1,<0.13",
    "pyright>=1.1.405,<2",
    "fsspec>=2025.5.1,<2026",
    "gcsfs>=2025.5.1,<2026",
    "pandas-stubs>=2.2.3.250527,<3",
    "pyarrow>=20.0.0",
]

[tool.uv]

[[tool.uv.index]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"

[tool.hatch.build.targets.sdist]
include = [
    "depmap_omics_rna",
    "gumbo_gql_client",
]

[tool.hatch.build.targets.wheel]
include = [
    "depmap_omics_rna",
    "gumbo_gql_client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "I",  # isort formatting
]
extend-include = ["*.ipynb"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["depmap_omics_rna", "main.py"]
reportInvalidTypeVarUse = "none"
